# External-Crosshair

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
electron/: main.ts  tsconfig.json
electron/ipc/: CanvasManage.ts  Storage.ts  index.ts
electron/preload/: main.ts
electron/tray/: index.ts
electron/utils/: index.ts  object.ts  storage.ts  window.ts
electron/window/: canvas.ts  index.ts  main.ts
src/: app.vue  main.ts  style.scss  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/components/AimOptions/: index.ts
src/components/AimOptions/src/: index.vue  item.vue  style.scss
src/components/CanvasModules/: index.ts
src/components/CanvasModules/modules/: Aim.ts  Cross.ts  Dot.ts  index.ts
src/components/CanvasModules/src/: index.vue  style.scss
src/components/FontAwesome/: FontAwesome.vue  index.ts
src/components/FontAwesome/svgs/: index.ts
src/components/Layout/: index.ts
src/components/Layout/window/: index.vue  style.scss
src/components/TitleBar/: TitleBar.vue  index.ts  style.scss
src/components/Windows/: Windows.vue  index.ts  style.scss
src/layout/: main.vue  style.scss
src/layouts/: LayoutMain.scss  LayoutMain.vue
src/main/: index.ts  index.vue  style.scss
src/router/: index.ts  routes.ts
src/utils/: array.ts  index.ts  limit.ts  object.ts  random.ts  storage.ts
src/views/Aim/: index.vue  style.scss
src/views/AimItem/: index.vue  style.scss
src/views/Canvas/: index.vue
src/views/Home/: index.vue
