[package]
name = "external-crosshair"
version = "0.1.0"
description = "FPS Game External Crosshair"
authors = ["Funny <funnydsu@gmail.com>"]
edition = "2021"
repository = "https://github.com/Funny002/External-Crosshair"
License = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
